# spotify-recorder

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  spotify-recorder
docs/: MODERNIZATION.md
src/: api.py  cli.py  install.sh  playback_monitor.py  recorder.py  spotdl.sh
