[project]
name = "spotify-recorder"
version = "2.0.0"
description = "Record Spotify tracks at highest quality using PipeWire"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=0.20.0",
    "spotipy>=2.22.1",
    "mutagen>=1.45.1",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "simple-term-menu>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
